# clawspec

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
clawspec/: __init__.py  __main__.py  api.py  baselines.py  cli.py  config.py  exceptions.py  interfaces.py  models.py  schema_validator.py
clawspec/assertions/: __init__.py  artifact.py  behavioral.py  common.py  gateway_logs.py  handoff.py  identity.py  operational.py  precondition.py  semantic.py  trace.py
clawspec/coverage/: ledger.py  reporter.py
clawspec/observability/: __init__.py  opik.py
clawspec/runner/: discover.py  evaluate.py  run.py  score_tracker.py  trigger.py
clawspec/templates/: expander.py  scaffold.py
clawspec/validate/: agent_checks.py  common.py  skill_checks.py  validator.py
docs/: assertion-reference.md  baselines-and-regression-detection.md  building-new-pipelines.md  compiler-integration.md  configuration-reference.md  contract-first-methodology.md  launch-posts.md  migrating-existing-agents.md  observability-integration.md  quick-start.md
examples/basic/: clawspec.yaml
examples/ceremonia/: README.md  coverage-ledger.yaml
examples/multi-agent/: clawspec.yaml
extensions/clawspec/: index.ts
mcp/: README.md
skill/: SKILL.md
skill/scripts/: run_skill.py
tests/fixtures/: valid_handoff.yaml  valid_pipeline.yaml  valid_scenario.yaml
tests/integration/: test_coverage_report.py  test_evaluate_scenarios.py  test_runner.py
tests/unit/: test_assertions.py  test_baselines.py  test_coverage.py  test_discover.py  test_handoff_evaluation.py  test_interfaces.py  test_run.py  (+8 more)
(+37 files in other folders)
